--- a/starship.toml
+++ b/starship.toml
@@ -1,5 +1,4 @@
-# --- Main Prompt Structure ---
-# Defines the order, layout, and connecting arrows for all modules.
+# --- PROMPT FORMAT ---
 format = """
 [░▒▓](#a3aed2)\
 [ $os ](bg:#a3aed2 fg:#090c0c)\
@@ -8,56 +7,54 @@ $directory\
 [](fg:#769ff0 bg:#394260)\
 $git_branch\
 $git_status\
-[](fg:#394260 bg:#326ce5)\
-$docker_context\
-$kubernetes\
-[](fg:#326ce5 bg:#212736)\
+[](fg:#394260 bg:#212736)\
 $nodejs\
 $rust\
 $golang\
 $php\
-$custom_yaml\
+[](fg:#212736 bg:#3B4252)\
 $cmd_duration\
-$jobs\
-[](fg:#212736 bg:#1d2230)\
-$battery\
+[](fg:#3B4252 bg:#1d2230)\
 $time\
 [ ](fg:#1d2230)\
 \n$character"""
 
-# --- OS Indicator ---
+# --- SEGMENT 1: OS ---
 [os]
-format = '$symbol'
+style = "bg:#a3aed2 fg:#090c0c"
+format = '[$symbol ]($style)'
 disabled = false
-[os.symbols]
-Windows = " "
-Ubuntu = ""
-Raspbian = ""
-NixOS = ""
-Mint = ""
-Manjaro = " "
-Macos = ""
-Linux = ""
-Gentoo = ""
-Fedora = ""
-Debian = ""
-CentOS = ""
-Arch = ""
-Alpine = ""
 
-# --- Directory ---
+[os.symbols]
+Alpine = ""
+Arch = ""
+CentOS = ""
+Debian = ""
+Fedora = ""
+Gentoo = ""
+Linux = ""
+Macos = ""
+Manjaro = ""
+Mint = ""
+NixOS = ""
+Raspbian = ""
+Ubuntu = ""
+Windows = ""
+
+# --- SEGMENT 2: DIRECTORY ---
 [directory]
 style = "fg:#e3e5e5 bg:#769ff0"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
+
 [directory.substitutions]
 "Documents" = "󰈙 "
 "Downloads" = " "
 "Music" = " "
 "Pictures" = " "
 
-# --- Git ---
+# --- SEGMENT 3: GIT ---
 [git_branch]
 symbol = ""
 style = "bg:#394260"
@@ -66,84 +63,48 @@ format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
 [git_status]
 style = "bg:#394260"
 format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+conflicted = "conflicted:!$count"
+ahead = "ahead:+$count"
+behind = "behind:-$count"
+diverged = "diverged:+$ahead_count-$behind_count"
+untracked = "untracked:?$count"
+stashed = "stashed:∗$count"
+modified = "modified:~$count"
+staged = '[staged:](green)+$count'
+renamed = "renamed:»$count"
+deleted = "deleted:!$count"
 
-# --- Developer Context (Docker & Kubernetes) ---
-[docker_context]
-symbol = " "
-style = "fg:#ffffff bg:#326ce5"
-format = '[[ $symbol$context ](fg:#ffffff bg:#326ce5)]($style)'
-
-[kubernetes]
-symbol = "󱃾 "
-style = "fg:#ffffff bg:#326ce5"
-format = '[[ $symbol$context( ☸ $namespace) ](fg:#ffffff bg:#326ce5)]($style)'
-disabled = false
-
-# --- Language & Command Context ---
-[nodejs]
-symbol = ""
+# --- SEGMENT 4: LANGUAGE TOOLS ---
+[package.style]
 style = "bg:#212736"
 format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+
+[nodejs]
+symbol = ""
 
 [rust]
 symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
 [golang]
 symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
 [php]
 symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
 
-[custom_yaml]
-description = "YAML file indicator"
-detect_files = ["*.yml", "*.yaml"]
-symbol = " "
-style = "bg:#212736"
-format = '[[ $symbol](fg:#769ff0 bg:#212736)]($style)'
-when = '[[ "$PWD" != "$HOME" ]]'
-
+# --- SEGMENT 5: COMMAND DURATION ---
 [cmd_duration]
-min_time = 2000
-style = "bg:#212736"
-format = '[[ 󰔟 $duration ](fg:#769ff0 bg:#212736)]($style)'
+min_time = 1000
+style = "bg:#3B4252"
+format = "[[󰔟 $duration](fg:#a0a9cb bg:#3B4252)]($style)"
 
-[jobs]
-symbol = ""
-style = "bg:#212736"
-number_threshold = 1
-format = '[[ $symbol$number ](fg:#769ff0 bg:#212736)]($style)'
-
-# --- System Status (Battery & Time) ---
-[battery]
-full_symbol = ""
-charging_symbol = "󰂄"
-discharging_symbol = ""
-unknown_symbol = "?"
-empty_symbol = ""
-disabled = false
-[[battery.display]]
-threshold = 20
-style = "fg:#f14c4c"
-[[battery.display]]
-threshold = 50
-style = "fg:#f5a70a"
-[[battery.display]]
-style = "fg:#a0a9cb"
-
+# --- SEGMENT 6: TIME ---
 [time]
 disabled = false
-time_format = "%I:%M %p"
+time_format = "%H:%M"
 style = "bg:#1d2230"
-format = '[[ $time ](fg:#a0a9cb bg:#1d2230)]($style)'
+format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
 
-# --- Prompt Character ---
+# --- FINAL PROMPT CHARACTER ---
 [character]
-success_symbol = "[❯](fg:#a3aed2)"
-error_symbol = "[✗](fg:#e06c75)"
-vimcmd_symbol = "[](fg:green)"
+success_symbol = "[❯](bold green)"
+error_symbol = "[❯](bold red)"
