--- a/starship.toml
+++ b/starship.toml
@@ -14,7 +14,9 @@ $golang\
 $php\
 [](fg:#212736 bg:#3B4252)\
 $cmd_duration\
-[](fg:#3B4252 bg:#1d2230)\
+[](fg:#3B4252 bg:#2E3440)\
+$battery\
+[](fg:#2E3440 bg:#1d2230)\
 $time\
 [ ](fg:#1d2230)\
 \n$character"""
@@ -103,6 +105,25 @@ disabled = false
 time_format = "%H:%M"
 style = "bg:#1d2230"
 format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
+
+# --- SEGMENT 7: BATTERY ---
+[battery]
+full_symbol = " "
+charging_symbol = "󰂄 "
+discharging_symbol = " "
+unknown_symbol = "? "
+empty_symbol = " "
+disabled = false
+format = "[$symbol$percentage]($style) "
+style = "bg:#2E3440"
+[[battery.display]]
+threshold = 20
+style = "fg:#f14c4c"
+[[battery.display]]
+threshold = 50
+style = "fg:#f5a70a"
+[[battery.display]]
+style = "fg:#a0a9cb"
 
 # --- FINAL PROMPT CHARACTER ---
 [character]
