--- a/starship.toml
+++ b/starship.toml
@@ -1,32 +1,50 @@
-# --- Main Prompt Structure (Revised) ---
+# --- Main ---
 format = """
-[░▒▓](#a3aed2)\
-[ $os ](bg:#a3aed2 fg:#090c0c)\
-[](bg:#769ff0 fg:#a3aed2)\
+[](#9A348E)\
+$os\
+$username\
+[](bg:#DA627D fg:#9A348E)\
 $directory\
-[](fg:#769ff0 bg:#394260)\
+[](fg:#DA627D bg:#FCA17D)\
 $git_branch\
 $git_status\
-[](fg:#394260 bg:#326ce5)\
-$docker_context\
-[](fg:#326ce5 bg:#212736)\
-$nodejs\
-$rust\
+[](fg:#FCA17D bg:#86BBD8)\
+$c\
+$elixir\
+$elm\
 $golang\
+$gradle\
+$haskell\
+$java\
+$julia\
+$nodejs\
+$nim\
+$rust\
+$scala\
 $php\
+[](fg:#86BBD8 bg:#06969A)\
+$docker_context\
+[](fg:#06969A bg:#3B4252)\
 $jobs\
-[](fg:#212736 bg:#3B4252)\
 $cmd_duration\
-[](fg:#3B4252 bg:#2E3440)\
 $battery\
-[](fg:#2E3440 bg:#1d2230)\
+[](fg:#3B4252 bg:#33658A)\
 $time\
-[ ](fg:#1d2230)\
-\n$character"""
+[](fg:#33658A)\
+\n$character
+"""
 
-# --- SEGMENT 1: OS ---
+# --- User & OS ---
+
+[username]
+show_always = false
+style_user = "bg:#9A348E"
+style_root = "bg:#9A348E"
+format = '[$user ]($style)'
+disabled = false
+
 [os]
-style = "bg:#a3aed2 fg:#090c0c"
+style = "bg:#9A348E"
 format = '[$symbol ]($style)'
 disabled = false
 [os.symbols]
@@ -45,9 +63,10 @@ Raspbian = ""
 Ubuntu = ""
 Windows = ""
 
-# --- SEGMENT 2: DIRECTORY ---
+# --- Directory & Git ---
+
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
+style = "bg:#DA627D"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
@@ -57,62 +76,100 @@ truncation_symbol = "…/"
 "Music" = " "
 "Pictures" = " "
 
-# --- SEGMENT 3: GIT ---
 [git_branch]
 symbol = ""
-style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
+style = "bg:#FCA17D"
+format = '[ $symbol $branch ]($style)'
 
 [git_status]
-style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
-conflicted = "conflicted:!$count"
-ahead = "ahead:+$count"
-behind = "behind:-$count"
-diverged = "diverged:+$ahead_count-$behind_count"
-untracked = "untracked:?$count"
-stashed = "stashed:∗$count"
-modified = "modified:~$count"
-staged = '[staged:](green)+$count'
-renamed = "renamed:»$count"
-deleted = "deleted:!$count"
+style = "bg:#FCA17D"
+format = '[$all_status$ahead_behind ]($style)'
 
-# --- SEGMENT 4: DEVELOPER CONTEXT (DOCKER) ---
-[docker_context]
-symbol = " "
-style = "fg:#ffffff bg:#326ce5"
-format = '[[ $symbol$context ](fg:#ffffff bg:#326ce5)]($style)'
+# --- Language Tooling ---
 
-# --- SEGMENT 5: LANGUAGE TOOLS & JOBS ---
-[package.style]
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+[c]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[elixir]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[elm]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[golang]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[gradle]
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[haskell]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[java]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[julia]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
 [nodejs]
 symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
+[nim]
+symbol = "󰆥 "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
 [rust]
 symbol = ""
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
-[golang]
-symbol = ""
+[scala]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
 
 [php]
 symbol = ""
+style = "bg:#86BBD8"
+format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
+
+
+# --- System & Status Modules ---
+
+[docker_context]
+symbol = " "
+style = "bg:#06969A"
+format = '[ $symbol $context ]($style)'
 
 [jobs]
 symbol = ""
-style = "bg:#212736"
+style = "bg:#3B4252"
 number_threshold = 1
-format = '[[ $symbol$number ](fg:#769ff0 bg:#212736)]($style)'
+format = '[[ $symbol$number ](fg:#a0a9cb bg:#3B4252)]($style)'
 
-# --- SEGMENT 6: COMMAND DURATION ---
 [cmd_duration]
 min_time = 1000
 style = "bg:#3B4252"
 format = "[[󰔟 $duration](fg:#a0a9cb bg:#3B4252)]($style)"
 
-# --- SEGMENT 7: BATTERY ---
 [battery]
 full_symbol = " "
 charging_symbol = "󰂄 "
@@ -123,21 +180,20 @@ disabled = false
 format = "[$symbol$percentage]($style) "
 [[battery.display]]
 threshold = 20
-style = "bg:#2E3440 fg:#f14c4c"
+style = "bg:#3B4252 fg:#f14c4c"
 [[battery.display]]
 threshold = 50
-style = "bg:#2E3440 fg:#f5a70a"
+style = "bg:#3B4252 fg:#f5a70a"
 [[battery.display]]
-style = "bg:#2E3440 fg:#a0a9cb"
+style = "bg:#3B4252 fg:#a0a9cb"
 
-# --- SEGMENT 8: TIME ---
 [time]
 disabled = false
-time_format = "%H:%M"
-style = "bg:#1d2230"
-format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
+time_format = "%R"
+style = "bg:#33658A"
+format = '[ ♥ $time ]($style)'
 
-# --- FINAL PROMPT CHARACTER ---
+# --- Final Prompt Character ---
 [character]
 success_symbol = "[❯](bold green)"
 error_symbol = "[✗](fg:#e06c75)"
