--- a/starship.toml
+++ b/starship.toml
@@ -191,7 +191,7 @@ style = "bg:#3B4252 fg:#a0a9cb"
 disabled = false
 time_format = "%R"
 style = "bg:#33658A"
-format = '[ ♥ $time ]($style)'
+format = '[ $time ]($style)'
 
 # --- Final Prompt Character ---
 [character]
